--- a/src/components/pages/Header/index.module.scss
+++ b/src/components/pages/Header/index.module.scss
@@ -14,6 +14,11 @@
     justify-content: center;
     gap: 1rem;
   }
+  &Wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
   &Search {
     align-self: start;
     display: flex;
@@ -30,7 +35,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 0.3rem;
     &Title {
       @include titleH5;
       color: var(--text-secondary);
@@ -43,7 +48,6 @@
     flex-direction: column;
     text-align: center;
     justify-content: start;
-    gap: 1rem;
     border-radius: var(--largeRadius);
     & li {
       @include paragraph1;
@@ -89,5 +93,23 @@
   .active {
     color: var(--bg-accentHover);
     background-color: var(--white-500);
+  }
+}
+
+.HeaderFilterPrice {
+  display: flex;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 610px) {
+  .HeaderContainer {
+    flex-direction: column;
+  }
+  .HeaderLinks {
+    padding-bottom: 0;
+  }
+  .HeaderSearch {
+    align-self: center;
+    margin-bottom: 0.5rem;
   }
 }
